--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-	<style name="Theme.CreativeHub" parent="android:Theme.Material.Light.NoActionBar">
-
+	<style name="Theme.CreativeHub" parent="Theme.MaterialComponents.DayNight">
+		<item name="android:windowBackground">@drawable/splash</item>
+		<item name="android:statusBarColor">@color/white</item>
+		<item name="android:windowLightStatusBar">true</item>
 	</style>
 
 </resources>
